--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <script src="https://kit.fontawesome.com/b5f6fc24cd.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <img src="spider-man.png" alt="image">
     <header>
         <nav>
             <a href="index.html" class="logo">
@@ -25,23 +24,26 @@
                 </div>
                 <ul class="nav-list">
                     <li>
-                        <a href="https://github.com" >
+                        <a href="https://github.com/Mahfuzy/Dori-codes-project2.git" >
                             <i class="fab fa-github"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://linkedin.com/" >
+                        <a href="www.linkedin.com/in/agbor-seidu-mahfuz-b98398288" >
                             <i class="fab fa-linkedin"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://twitter.com" >
+                        <a href="https://twitter.com/AgborMahfuz" >
                             <i class="fab fa-twitter"></i>
                         </a>
                     </li>
                 </ul>
             </div>
         </nav>
+        <div class="background-image">
+            <img src="spider-man.png" alt="image">
+        </div>
     </header>
     <main>
         <div class="contents">
