--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="www.linkedin.com/in/agbor-seidu-mahfuz-b98398288" >
+                        <a href="https://linkedin.com/in/agbor-seidu-mahfuz-b98398288" >
                             <i class="fab fa-linkedin"></i>
                         </a>
                     </li>
